--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jotai": "^2.10.3",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
