--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "jotai": "^2.10.3",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
