--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -25,7 +26,10 @@
     "daisyui": "^5.0.27",
     "eslint": "^9.25.0",
     "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "^10.1.2",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
   }
