--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,22 +1,24 @@
 server {
     listen 80;
-
-    server_name localhost;
+    server_name genai-demo.skcc.com;
+    client_max_body_size 250M;
+    server_tokens off;
 
     location / {
-        proxy_pass http://nextjs:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+      root   /usr/share/nginx/html;
+      index  example_main.html;
+      try_files $uri $uri/ /example_main.html;
     }
 
-    # 정적 파일 캐싱 예시
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
-        expires 7d;
-        access_log off;
-        add_header Cache-Control "public";
-        proxy_pass http://nextjs:3000;
+    location /api {
+      proxy_pass         http://host.docker.internal:8000;
+      proxy_redirect     off;
+      proxy_buffering    off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
+      proxy_read_timeout 180s;
+      proxy_send_timeout 180s;
     }
 }
