--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version: '3.8'
 
 services:
-  nextjs:
-    build:
-      context: ./
-    container_name: nextjs
+  dayofdaye:
+    image: ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
+    container_name: dayofdaye
     expose:
       - "3000"
     environment:
@@ -18,4 +17,4 @@ services:
     volumes:
       - ./deploy/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - nextjs
+      - dayofdaye
