--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "jotai": "^2.12.3",
+    "lodash": "^4.17.21",
     "next": "15.3.1",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
