--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "gray-matter": "^4.0.3",
     "jotai": "^2.12.3",
     "lodash": "^4.17.21",
     "next": "15.3.1",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
